--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -153,6 +153,8 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [Directories2]
 UNR=../../../../Test/Content/
@@ -781,5 +783,8 @@ SceneOutliner.TimeStamp=2018.08.04-22.21.22
 SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2018.08.04-22.21.18
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+
+[MRU]
+MRUItem0=/Game/NewMap
 
 
