--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [MessageLog]
 LastLogListing=SourceControl
@@ -117,9 +117,9 @@ BP_Sky_Sphere_C.Input=True
 BP_Sky_Sphere_C.Actor=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=180.000
+ScreenPosition=X=171.000 Y=108.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -157,7 +157,7 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [Directories2]
-UNR=../../../../Test/Content/
+UNR=../../../../Test/Content
 BRUSH=../../../../Test/Content/
 FBX=../../../../Test/Content/
 FBXAnim=../../../../Test/Content/
@@ -167,7 +167,7 @@ GenericOpen=../../../../Test/Content/
 GenericSave=../../../../Test/Content/
 MeshImportExport=../../../../Test/Content/
 WorldRoot=../../../../Test/Content/
-Level=../../../../Test/Content/
+Level=../../../../Test/Content
 Project=E:/Mantra UE4/UE_4.20/
 
 [ModuleFileTracking]
