--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -785,6 +785,7 @@ HierarchicalLODOutliner.TimeStamp=2018.08.04-22.21.18
 HierarchicalLODOutliner.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/NewMap
+MRUItem0=/Game/NewMap1
+MRUItem1=/Game/NewMap
 
 
